--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
       <div class="container-fluid">
         <a class="navbar-brand" href="Localhost:5088">Tándem</a>
      
-         <a href='@Url.Action("LogIn1", "Account")'>Actividades</a>
+         <a href='@Url.Action("Actividades", "Home")'>Actividades</a>
          <a href='@Url.Action("LogIn1", "Account")'>Nosotros</a>
         <img src="/Imagenes/CampanitaNotifi.webp" alt="CampanitaDeNoti">
         <img src="" alt="">
@@ -43,21 +43,21 @@
             <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Menu</h5>
             <button
               type="button"
-              class="btn-close"
+              class="bt-close"
               data-bs-dismiss="offcanvas"
               aria-label="Close"
             ></button>
           </div>
 
           <div class="offcanvas-body">
-            <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+            <ul class="navbar-nav justify-contet-end flex-grow-1 pe-3">
               <li class="nav-item">
              
-                 <a href='@Url.Action("Home", "Home")' class="nav-link active" aria-current="page">Home</a>
+                 <a href='@Url.Action("Home", "Home")' class="nav-lik active" aria-current="page">Home</a>
               </li>
               <li class="nav-item">
                
-                 <a href='@Url.Action("LogIn1", "Home")' class="nav-link" >Favoritos</a>
+                 <a href='@Url.Action("LogIn1", "Home")' class="nav-link" >Favoitos</a>
 
               </li>
               <li class="nav-item">
