--- a/Views/Home/Perfil.cshtml
+++ b/Views/Home/Perfil.cshtml
@@ -80,7 +80,7 @@
             
 
         }
-        <a href='@Url.Action("VerMasPerfil", "Home")' class="nav-link" >Editar perfil </a>
+        <a href='@Url.Action("VerMasPerfil", "Home")' class="nav-link" >Ver mas datos </a>
 
         <a href='@Url.Action("Configuracion", "Home")' class="nav-link" >Editar perfil </a>
 
