--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -1,33 +1,46 @@
-
 @{
-        ViewData["Title"] = "Index";
+    ViewData["Title"] = "Iniciar Sesión";
 }
-    <section class="login-box">
-        <h1>Tándem</h1>
-        //hacer todo el diseño como esta en el figma
-        <form method="post" action='@Url.Action("LogIn2", "Account")'>
-            <p>
-                <div class="mb-3">
-        <input type="text" class="form-control" id="formGroupExampleInput" name="userName"  placeholder="Nombre de usuario">
+
+<div class="login-background">
+    <div class="circle circle-top"></div>
+    <div class="circle circle-bottom"></div>
+
+    <div class="login-container">
+        <div class="login-header">
+            <img src="~/Content/Images/logo_tandem.png" alt="Logo Tándem" class="logo-login">
+            <h2>Avanzamos Juntos</h2>
         </div>
-        <div class="mb-3">
-        <input type="text" class="form-control" id="formGroupExampleInput" name="email" placeholder="Email">
-        </div>
-         <div class="mb-3">
-        <input type="text" class="form-control" id="formGroupExampleInput" name="contraseña" placeholder="Contraseña">
-        </div>
-        <div class="col-12">
-            <button type="submit" class="btn btn-primary">Sign in</button>
-        </div>
+
+        <div class="login-box">
+            <h1>Iniciar Sesión</h1>
+
+            <form method="post" action='@Url.Action("LogIn2", "Account")'>
+                <div class="input-group">
+                    <i class="fa fa-user"></i>
+                    <input type="text" name="userName" placeholder="Nombre de usuario" required>
+                </div>
+
+                <div class="input-group">
+                    <i class="fa fa-lock"></i>
+                    <input type="password" name="contraseña" placeholder="Contraseña" required>
+                </div>
+
+                <a href="#" class="forgot">¿Te olvidaste tu contraseña?</a>
+
+                <button type="submit" class="btn-login">Iniciar Sesión</button>
+
+                <div class="social-login">
+                    <img src="~/Content/Images/google.png" alt="Google" class="social-icon">
+                    <img src="~/Content/Images/facebook.png" alt="Facebook" class="social-icon">
+                    <img src="~/Content/Images/apple.png" alt="Apple" class="social-icon">
+                </div>
+            </form>
+
+            <p class="no-account">
+                ¿No tienes cuenta?
+                <a href='@Url.Action("Registrarse1", "Account")'>Crear Cuenta</a>
             </p>
-        </form>
-
-        <h2>@ViewBag.MensajeLogin</h2>
-
-        <p>No tienes cuenta, 
-            <a href='@Url.Action("Registrarse1", "Account")'>Registrate</a>
-        </p>
-
-        </p>
-    </section>
-    //preg a iara si esta view y registrarse tiene que ir en una carpeta de account dentro de las views
+        </div>
+    </div>
+</div>
