--- a/Views/Home/Actividades.cshtml
+++ b/Views/Home/Actividades.cshtml
@@ -19,7 +19,7 @@
       </div>
 
       <div class="tarjeta juegos">
-        <a href>Juegos</a>
+        Juegos
         <div class="boton-play"><i></i></div>
       </div>
     </div>
