--- a/Views/Home/Actividades.cshtml
+++ b/Views/Home/Actividades.cshtml
@@ -20,7 +20,7 @@
 
       <div class="tarjeta juegos">
         Juegos
-        <div class="boton-play"><i></i></div>
+        <a href='@Url.Action("JuegoPictogramas", "Home")'><div class="boton-play"><i></i></div></a>
       </div>
     </div>
   </section>
