--- a/Views/Home/Perfil.cshtml
+++ b/Views/Home/Perfil.cshtml
@@ -4,6 +4,7 @@
 
 <link rel="stylesheet" href="~/css/perfil.css" asp-append-version="true" />
 
+
 <div class="profile-card">
     <div class="profile-header">
         <div class="profile-picture-container">
@@ -128,3 +129,4 @@
     <div class="bubble bubble-br"></div>
 </div>
 
+ <script src="js/site.js"></script>
